k8s/openvidu-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openvidu-deployment
  labels:
    app: openvidu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openvidu
  template:
    metadata:
      labels:
        app: openvidu
    spec:
      containers:
      - name: openvidu-server
        image: openvidu/openvidu-server-kms:latest #
#        image: openvidu/openvidu-dev
        ports:
        - containerPort: 4443
