k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inong-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  # 아래 tls 부분을 추가!
  tls:
  - hosts:
    - "api.inong.shop"
    secretName: inong-com-tls
  rules:
  - host: api.inong.shop
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: apigateway-service
              port:
                number: 80 # 서비스 포트를 적어 줘야 한다.
        - path: /openvidu/(.*)
          pathType: Prefix
          backend:
            service:
              name: dev-openvidu-service 
              port:
                number: 80
